# distill-column-chat

./: .env   .gitignore  pyproject.toml
agents/: base_chat.py  cli_chat.py  prompts.py  tools.py
data/: loading.py
helpers/: describe_data.py  excel.py  time_series_split.py
ma_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
proto5/: pyvenv.cfg
rag/: build_index.py  query.py
src/: check_env.py  config.py  llm_backend.py  pipeline.py
